fixed job card layout issue

--- a/client/src/components/JobDetailsPage/style.css
+++ b/client/src/components/JobDetailsPage/style.css
@@ -104,6 +104,7 @@
 .job-details-location-type-con {
   display: flex;
   align-items: center;
+  width: 85%;
 }
 
 .job-details-location-type {
@@ -116,6 +117,8 @@
   color: #EB6A4D;
   font-size: 25px;
   margin-right: 8px;
+  min-width: 22px;
+  min-height: 22px;
 }
 
 .job-details-location {
@@ -522,7 +525,7 @@
     margin-right: 13px;
   }
   .job-details-location-link {
-    font-size: 13px;
+    font-size: 12px;
   }
   .job-details-title-rating-con {
     margin-left: 10px;
@@ -535,14 +538,16 @@
     font-size: 17px;
   }
   .job-details-location-icon {
-    font-size: 16px;
+    font-size: 14px;
+    max-width: 14px;
+    max-height: 14px;
     margin-right: 5px;
   }
   .job-details-location {
-    font-size: 14px;
+    font-size: 12px;
   }
   .job-details-salary {
-    font-size: 16px;
+    font-size: 13px;
   }
   .job-details-desc-heading {
     font-size: 16px;
